--- a/LITRevu/app/templates/single_page_template.html
+++ b/LITRevu/app/templates/single_page_template.html
@@ -3,7 +3,7 @@
 
 {% block main_content %}
     <main class="notepad">
-        <div class="page right">
+        <div class="page right" id="rightPage">
             <div class="page-content">
                 <h2 class="main-title">
                     {% block content_title %}
