--- a/LITRevu/app/templates/base_template.html
+++ b/LITRevu/app/templates/base_template.html
@@ -33,11 +33,11 @@
         <ul class="navigation-menu">
             {% if user.is_authenticated %}
             <li class="navigation-menu-left-item nav-pink"><a href="/"><i class="icon-books nav-pink"></i>Home</a></li>
-            <li class="nav-blue"><a href="/profile/"><i class="icon-user nav-blue"></i>Profile</a></li>
-            <li class="nav-red"><a href="/logout/"><i class="icon-switch nav-red"></i>Logout</a></li>
+            <li class="nav-blue"><a href="{% url 'profile' %}"><i class="icon-user nav-blue"></i>Profile</a></li>
+            <li class="nav-red"><a href="{% url 'logout' %}"><i class="icon-switch nav-red"></i>Logout</a></li>
             {% else %}
-            <li class="navigation-menu-right-item"><a href="/login/"><i class="icon-unlocked"></i>Login</a></li>
-            <li><a href="/register/"><i class="icon-quill"></i>Register</a></li>
+            <li class="navigation-menu-right-item"><a href="{% url 'login' %}"><i class="icon-unlocked"></i>Login</a></li>
+            <li><a href="{% url 'register' %}"><i class="icon-quill"></i>Register</a></li>
             {% endif %}
         </ul>
     </nav>
