--- a/LITRevu/app/templates/double_page_template.html
+++ b/LITRevu/app/templates/double_page_template.html
@@ -4,7 +4,7 @@
 {% block main_content %}
 
     <main class="notepad">
-        <div class="page left double-page-layout">
+        <div class="page left double-page-layout" id="leftPage">
             <div class="page-content">
                 <h2 class="main-title">
                     {% block content_title %}
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </div>
-        <div class="page right double-page-layout">
+        <div class="page right double-page-layout" id="rightPage">
             <div class="page-content">
                 <h2 class="main-title">
                     {% block second_page_title %}
